0028576: Get rid of the TopOpeBRep* algorithms in TKFeat toolkit

The TKFeat toolkit has been cleared from the usage of TopOpeBRep* classes.